@@ -1,5 +1,11 @@
 2006-11-02  Wim Taymans  <wim@fluendo.com>
 
+	* src/com/fluendo/player/Status.java: (Status.paint):
+	Rearange status area, always show start/stop even if the file is not
+	seekable.
+
+2006-11-02  Wim Taymans  <wim@fluendo.com>
+
 	* src/com/fluendo/player/Cortado.java: (Cortado..stop):
 	Ignore potential errors in shutdown.
 
